# TestWritingSite

./: .gitignore  README.md  justfile  package-lock.json  pyproject.toml  tailwind.config.js
server/: index.py  writing.py
templates/icons/: left.html
templates/pages/: story.html  story_page.html  writing_index.html
writing/: I Only Like You for Your Dog.txt  The Last Ship.txt  The Love of the Game.txt  The Rays of Sirius-6.txt  rename_stories.sh
writing/Babylon Law/: 0.txt
writing/Prompts/: 1.txt  2.txt  3.txt  4.txt
writing/The Network/: 0.txt  1.txt
